.work/must-gather-analysis/registry-build11-ci-openshift-org-ci-ln-vjb5l1t-stable-sha256-f89169f1cf6fd47be50038cc1c80be38e4fb997d7805094b3f6e50034f9c4c20/namespaces/openshift-cluster-csi-drivers/networking.k8s.io/networkpolicies.yaml
---
apiVersion: networking.k8s.io/v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      capability.openshift.io/name: Storage
      include.release.openshift.io/hypershift: "true"
      include.release.openshift.io/ibm-cloud-managed: "true"
      include.release.openshift.io/self-managed-high-availability: "true"
      include.release.openshift.io/single-node-developer: "true"
    creationTimestamp: "2026-01-28T09:26:11Z"
    generation: 1
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:capability.openshift.io/name: {}
            f:include.release.openshift.io/hypershift: {}
            f:include.release.openshift.io/ibm-cloud-managed: {}
            f:include.release.openshift.io/self-managed-high-availability: {}
            f:include.release.openshift.io/single-node-developer: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"0370d296-6904-481d-ab90-157c7e5b835a"}: {}
        f:spec:
          f:egress: {}
          f:podSelector: {}
          f:policyTypes: {}
      manager: cluster-version-operator
      operation: Update
      time: "2026-01-28T09:26:11Z"
    name: allow-all-egress
    namespace: openshift-cluster-csi-drivers
    ownerReferences:
    - apiVersion: config.openshift.io/v1
      controller: true
      kind: ClusterVersion
      name: version
      uid: 0370d296-6904-481d-ab90-157c7e5b835a
    resourceVersion: "2168"
    uid: 17b848d9-224c-499b-b3ea-b05101cc5a5f
  spec:
    egress:
    - ports:
      - endPort: 65535
        port: 1
        protocol: TCP
    podSelector:
      matchLabels:
        openshift.storage.network-policy.all-egress: allow
    policyTypes:
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      capability.openshift.io/name: Storage
      include.release.openshift.io/hypershift: "true"
      include.release.openshift.io/ibm-cloud-managed: "true"
      include.release.openshift.io/self-managed-high-availability: "true"
      include.release.openshift.io/single-node-developer: "true"
    creationTimestamp: "2026-01-28T09:26:11Z"
    generation: 1
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:capability.openshift.io/name: {}
            f:include.release.openshift.io/hypershift: {}
            f:include.release.openshift.io/ibm-cloud-managed: {}
            f:include.release.openshift.io/self-managed-high-availability: {}
            f:include.release.openshift.io/single-node-developer: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"0370d296-6904-481d-ab90-157c7e5b835a"}: {}
        f:spec:
          f:egress: {}
          f:podSelector: {}
          f:policyTypes: {}
      manager: cluster-version-operator
      operation: Update
      time: "2026-01-28T09:26:11Z"
    name: allow-egress-to-api-server
    namespace: openshift-cluster-csi-drivers
    ownerReferences:
    - apiVersion: config.openshift.io/v1
      controller: true
      kind: ClusterVersion
      name: version
      uid: 0370d296-6904-481d-ab90-157c7e5b835a
    resourceVersion: "2203"
    uid: b5e47b3e-5904-4ef9-81b3-8e2723ad67f1
  spec:
    egress:
    - ports:
      - port: 6443
        protocol: TCP
    podSelector:
      matchLabels:
        openshift.storage.network-policy.api-server: allow
    policyTypes:
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      capability.openshift.io/name: Storage
      include.release.openshift.io/hypershift: "true"
      include.release.openshift.io/ibm-cloud-managed: "true"
      include.release.openshift.io/self-managed-high-availability: "true"
      include.release.openshift.io/single-node-developer: "true"
    creationTimestamp: "2026-01-28T09:26:12Z"
    generation: 1
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:capability.openshift.io/name: {}
            f:include.release.openshift.io/hypershift: {}
            f:include.release.openshift.io/ibm-cloud-managed: {}
            f:include.release.openshift.io/self-managed-high-availability: {}
            f:include.release.openshift.io/single-node-developer: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"0370d296-6904-481d-ab90-157c7e5b835a"}: {}
        f:spec:
          f:ingress: {}
          f:podSelector: {}
          f:policyTypes: {}
      manager: cluster-version-operator
      operation: Update
      time: "2026-01-28T09:26:12Z"
    name: allow-ingress-to-metrics-range
    namespace: openshift-cluster-csi-drivers
    ownerReferences:
    - apiVersion: config.openshift.io/v1
      controller: true
      kind: ClusterVersion
      name: version
      uid: 0370d296-6904-481d-ab90-157c7e5b835a
    resourceVersion: "2228"
    uid: 808e43ef-3a0f-4f1c-8f9e-f33e0dece85d
  spec:
    ingress:
    - ports:
      - endPort: 9223
        port: 9201
        protocol: TCP
    podSelector:
      matchLabels:
        openshift.storage.network-policy.metrics-range: allow
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      capability.openshift.io/name: Storage
      include.release.openshift.io/hypershift: "true"
      include.release.openshift.io/ibm-cloud-managed: "true"
      include.release.openshift.io/self-managed-high-availability: "true"
      include.release.openshift.io/single-node-developer: "true"
    creationTimestamp: "2026-01-28T09:26:13Z"
    generation: 1
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:capability.openshift.io/name: {}
            f:include.release.openshift.io/hypershift: {}
            f:include.release.openshift.io/ibm-cloud-managed: {}
            f:include.release.openshift.io/self-managed-high-availability: {}
            f:include.release.openshift.io/single-node-developer: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"0370d296-6904-481d-ab90-157c7e5b835a"}: {}
        f:spec:
          f:ingress: {}
          f:podSelector: {}
          f:policyTypes: {}
      manager: cluster-version-operator
      operation: Update
      time: "2026-01-28T09:26:13Z"
    name: allow-ingress-to-operator-metrics-range
    namespace: openshift-cluster-csi-drivers
    ownerReferences:
    - apiVersion: config.openshift.io/v1
      controller: true
      kind: ClusterVersion
      name: version
      uid: 0370d296-6904-481d-ab90-157c7e5b835a
    resourceVersion: "2252"
    uid: 2d95417a-f34f-48fc-b5f0-ac959d21d1e9
  spec:
    ingress:
    - ports:
      - endPort: 8445
        port: 8443
        protocol: TCP
    podSelector:
      matchLabels:
        openshift.storage.network-policy.operator-metrics-range: allow
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      capability.openshift.io/name: Storage
      include.release.openshift.io/hypershift: "true"
      include.release.openshift.io/ibm-cloud-managed: "true"
      include.release.openshift.io/self-managed-high-availability: "true"
      include.release.openshift.io/single-node-developer: "true"
    creationTimestamp: "2026-01-28T09:26:13Z"
    generation: 1
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:capability.openshift.io/name: {}
            f:include.release.openshift.io/hypershift: {}
            f:include.release.openshift.io/ibm-cloud-managed: {}
            f:include.release.openshift.io/self-managed-high-availability: {}
            f:include.release.openshift.io/single-node-developer: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"0370d296-6904-481d-ab90-157c7e5b835a"}: {}
        f:spec:
          f:egress: {}
          f:podSelector: {}
          f:policyTypes: {}
      manager: cluster-version-operator
      operation: Update
      time: "2026-01-28T09:26:13Z"
    name: allow-to-dns
    namespace: openshift-cluster-csi-drivers
    ownerReferences:
    - apiVersion: config.openshift.io/v1
      controller: true
      kind: ClusterVersion
      name: version
      uid: 0370d296-6904-481d-ab90-157c7e5b835a
    resourceVersion: "2274"
    uid: 297ffc56-44ca-4aa5-a234-cdb1def67e31
  spec:
    egress:
    - ports:
      - port: dns-tcp
        protocol: TCP
      - port: dns
        protocol: UDP
      to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: openshift-dns
        podSelector:
          matchLabels:
            dns.operator.openshift.io/daemonset-dns: default
    podSelector:
      matchLabels:
        openshift.storage.network-policy.dns: allow
    policyTypes:
    - Egress
kind: NetworkPolicyList
metadata:
  resourceVersion: "35173"
